Closed
Bug 464957
Opened 17 years ago
Closed 17 years ago
[redux] as3/sampling/Callback.as intermittently crashes while shutting down the shell
Categories
(Tamarin Graveyard :: Tracing Virtual Machine, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
flash10.1
People
(Reporter: brbaker, Assigned: tierney)
Details
(Keywords: flashplayer)
Attachments
(1 file)
|
57.48 KB,
patch
|
treilly
:
review+
|
Details | Diff | Splinter Review |
I have seen this on a couple of different windows and mac machines. All tests pass and there is no more user code to execute and the shell will crash. I have verified by adding a simple trace to the end of the testcase and it will trace and then crash.
-bash-3.2$ $AVM as3/sampling/Callback.abc
Sampling api: callback
callback1 called at 31799
callback1 called at 63678
memory summary: allocs=254869 deallocs=189014
callback2 called at 95518
callback2 called at 127413
callback2 called at 159303
Callback: callback called at least once callback#=2 = true PASSED!
Callback: callback with return type called at least once callback#=3 = true PASSED!
Callback: callback with parameters throws exception = ArgumentError: Error #1063 PASSED!
Callback: function is not defined = ReferenceError: Error #1065 PASSED!
avmplus crash: exception 0xC0000005 occurred
Writing minidump crash log to avmplusCrash.dmp
Flags: wanted-flashplayer10+
Flags: in-testsuite+
Flags: flashplayer-triage+
Flags: flashplayer-qrb?
Updated•17 years ago
|
Assignee: nobody → tierney
Status: NEW → ASSIGNED
Flags: flashplayer-qrb?
Priority: -- → P3
Target Milestone: --- → flash10.x
| Assignee | ||
Comment 1•17 years ago
|
||
Can't throw exceptions when we're in the middle of performing an allocation. The sampler callback was throwing an exception when invoked due to wrong # of arguments, but the callback is called while we're making an allocation, so bad things happened. Changed the code to swallow any exceptions the callback throws, and stop sampling.
Also modified a sampler testcase where we were testing to make sure an exception was thrown from an incorrect callback.
Attachment #348819 -
Flags: review?(treilly)
Comment 2•17 years ago
|
||
Comment on attachment 348819 [details] [diff] [review]
Fix crash
return'ing a bool from a void function? otherwise looks good
Updated•17 years ago
|
Attachment #348819 -
Flags: review?(treilly) → review+
| Assignee | ||
Comment 3•17 years ago
|
||
Pushed to TR: http://hg.mozilla.org/tamarin-redux/rev/da7e948b236d
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Flags: flashplayer-qrb+
| Reporter | ||
Updated•17 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•