Fix bug 464957 - can't throw exceptions from the callback method, since it can be invoked while making an allocation.  Instead just swallow any exceptions.  Fix missing write barrier in NewObjectSample.  (r=treilly)